--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -55,9 +55,13 @@
                 <svg-icon name="settings"></svg-icon>
                 <span trans>Settings</span>
             </a>
-            <a class="menu-item" routerLink="artists" *ngIf="currentUser.hasPermission('artists.update')" routerLinkActive="router-link-active">
+            <a class="menu-item" routerLink="artists" *ngIf="currentUser.hasPermission('artists.create')" routerLinkActive="router-link-active">
                 <svg-icon name="mic"></svg-icon>
                 <span trans>Artists</span>
+            </a>
+            <a class="menu-item" [routerLink]="['artists', currentUser.artist.id, 'edit']" *ngIf="currentUser.isArtist()" routerLinkActive="router-link-active">
+                <svg-icon name="mic"></svg-icon>
+                <span trans>Profile</span>
             </a>
             <a class="menu-item" routerLink="albums" *ngIf="currentUser.hasPermission('albums.update')" routerLinkActive="router-link-active">
                 <svg-icon name="album"></svg-icon>
@@ -75,7 +79,7 @@
                 <svg-icon name="playlist-play"></svg-icon>
                 <span trans>Playlists</span>
             </a>
-            <a class="menu-item" routerLink="users" *ngIf="currentUser.hasPermission('users.view')" routerLinkActive="router-link-active">
+            <a class="menu-item" routerLink="users" *ngIf="currentUser.hasPermission('users.create')" routerLinkActive="router-link-active">
                 <svg-icon name="person"></svg-icon>
                 <span trans>Users</span>
             </a>
