--- a/client/src/app/admin/artists/new-artist-page/new-artist-page.component.html
+++ b/client/src/app/admin/artists/new-artist-page/new-artist-page.component.html
@@ -11,11 +11,11 @@
                 <input type="text" [(ngModel)]="artist.name" id="artist-name" name="name" required>
                 <div class="error" *ngIf="errors.name">{{errors.name}}</div>
             </div>
-            <div class="input-container">
-                <label for="artist-popularity" trans>Popularity</label>
-                <input type="number" [(ngModel)]="artist.spotify_popularity" id="artist-popularity" name="popularity" min="1" max="100">
-                <div class="error" *ngIf="errors.spotify_popularity">{{errors.spotify_popularity}}</div>
-            </div>
+            <!--<div class="input-container">-->
+                <!--<label for="artist-popularity" trans>Popularity</label>-->
+                <!--<input type="number" [(ngModel)]="artist.spotify_popularity" id="artist-popularity" name="popularity" min="1" max="100">-->
+                <!--<div class="error" *ngIf="errors.spotify_popularity">{{errors.spotify_popularity}}</div>-->
+            <!--</div>-->
             <div class="input-container with-addon">
                 <label for="small-image" trans>Small Image</label>
                 <button type="button" class="no-style addon" (click)="openInsertImageModal('small')" tooltip="Upload image">
